# LibreSprite

./: CMakeLists.txt
emscripten/: CMakeLists.txt
src/: CMakeLists.txt
src/script/: CMakeLists.txt
